Add both nvhpc@21.9 and pgi@18.10 compilers to expanse/0.17.2/gpu
Note, however, at least during the first attempted test deployment on
Expanse, neither compiler was recognized by the spack compiler add
command. Both should be supported as compilers in this version of spack.
As such, this issue will be double checked on next test deployment.

--- a/etc/spack/sdsc/expanse/0.17.2/gpu/yamls/modules.yaml
+++ b/etc/spack/sdsc/expanse/0.17.2/gpu/yamls/modules.yaml
@@ -38,6 +38,9 @@ modules:
         environment:
           set:
             INTEL_LICENSE_FILE: '40000@elprado.sdsc.edu:40200@elprado.sdsc.edu'
+      intel-mkl:
+        suffixes:
+          'threads=openmp': omp
       kokkos:
         suffixes:
           '+openmp': omp
@@ -47,6 +50,11 @@ modules:
       petsc:
         suffixes:
           '+complex': cmplx
+      pgi:
+        environment:
+          set:
+            PGROUPD_LICENSE_FILE: '40000@elprado.sdsc.edu:40200@elprado.sdsc.edu'
+            LM_LICENSE_FILE: '40000@elprado.sdsc.edu:40200@elprado.sdsc.edu'
       slepc:
         suffixes:
           '^petsc +complex': cmplx
