--- a/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/packages.yaml
+++ b/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/packages.yaml
@@ -64,3 +64,12 @@ packages:
       - spec: 'ghostscript@9.27 % gcc@10.2.0 arch=linux-rocky8-zen2'
         prefix: /usr
     buildable: false
+  gaussian:
+    permissions:
+      read: group
+      group: gaussian
+  vasp6:
+    permissions:
+      read: group
+      group: vasp-6
+
