added vasp permissions to packages.yaml

--- a/etc/spack/packages.yaml
+++ b/etc/spack/packages.yaml
@@ -73,3 +73,7 @@ packages:
     permissions:
       read: group
       group: jpg
+  vasp6:
+    permissions:
+      read: group
+      group: vasp-6
