Add gamess@2021.09 % gcc@10.2.0 ^openmpi@4.1.3 to expanse/0.17.3/cpu

--- a/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/modules.yaml
+++ b/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/modules.yaml
@@ -37,6 +37,7 @@ modules:
       openblas:
         suffixes:
           'threads=openmp': omp
+          '+ilp64': i64
       petsc:
         suffixes:
           '+complex': cmplx
