--- a/etc/spack/sdsc/tscc/0.17.3/cpu/yamls/packages.yaml
+++ b/etc/spack/sdsc/tscc/0.17.3/cpu/yamls/packages.yaml
@@ -1,72 +1,72 @@
 packages:
   lustre:
     externals:
-      - spec: 'lustre@2.12.8 % gcc@8.5.0 arch=linux-rocky8-skylake_avx512'
+      - spec: 'lustre@2.15.2 % gcc@11.2.0 arch=linux-rocky9-skylake_avx512'
         prefix: /usr
-      - spec: 'lustre@2.12.8 % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'lustre@2.15.2 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
-      - spec: 'lustre@2.12.8 % intel@19.1.3.304 arch=linux-rocky8-cascadelake'
+      - spec: 'lustre@2.15.2 % intel@19.1.3.304 arch=linux-rocky9-broadwell'
         prefix: /usr
-      - spec: 'lustre@2.12.8 % aocc@3.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'lustre@2.15.2 % aocc@3.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
     buildable: false
   texlive:
     externals:
-      - spec: 'texlive@live % gcc@8.5.0 arch=linux-rocky8-skylake_avx512'
+      - spec: 'texlive@live % gcc@11.2.0 arch=linux-rocky9-skylake_avx512'
         prefix: /usr
-      - spec: 'texive@live % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'texive@live % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
-      - spec: 'texlive@live % intel@19.1.3.304 arch=linux-rocky8-cascadelake'
+      - spec: 'texlive@live % intel@19.1.3.304 arch=linux-rocky9-broadwell'
         prefix: /usr
     buildable: false
   openssl:
     externals:
-      - spec: 'openssl@1.1.1k % gcc@8.5.0 arch=linux-rocky8-skylake_avx512'
+      - spec: 'openssl@3.0.1 % gcc@11.2.0 arch=linux-rocky9-skylake_avx512'
         prefix: /usr
-      - spec: 'openssl@1.1.1k % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'openssl@3.0.1 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
-      - spec: 'openssl@1.1.1k % intel@19.1.3.304 arch=linux-rocky8-cascadelake'
-        prefix: /usr
+      - spec: 'openssl@3.0.1 % intel@19.1.3.304 arch=linux-rocky9-broadwell'
         prefix: /usr
     buildable: false
   rdma-core:
     externals:
-      - spec: 'rdma-core@28.0 % gcc@8.5.0 arch=linux-rocky8-skylake_avx512'
+      - spec: 'rdma-core@41.0 % gcc@11.2.0 arch=linux-rocky9-skylake_avx512'
         prefix: /usr
-      - spec: 'rdma-core@28.0 % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'rdma-core@41.0 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
-      - spec: 'rdma-core@28.0 % intel@19.1.3.304 arch=linux-rocky8-cascadelake'
+      - spec: 'rdma-core@41.0 % gcc@9.2.0 arch=linux-rocky9-broadwell'
+        prefix: /usr
+      - spec: 'rdma-core@41.0 % intel@19.1.3.304 arch=linux-rocky9-broadwell'
         prefix: /usr
         prefix: /usr
     buildable: false
   hcoll:
     externals:
-      - spec: 'hcoll@4.4.2968 % gcc@8.5.0 arch=linux-rocky8-skylake_avx512'
+      - spec: 'hcoll@4.4.2968 % gcc@11.2.0 arch=linux-rocky9-skylake_avx512'
         prefix: /opt/mellanox/hcoll
-      - spec: 'hcoll@4.4.2968 % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'hcoll@4.4.2968 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /opt/mellanox/hcoll
-      - spec: 'hcoll@4.4.2968 % intel@19.1.3.304 arch=linux-rocky8-cascadelake'
+      - spec: 'hcoll@4.4.2968 % intel@19.1.3.304 arch=linux-rocky9-broadwell'
         prefix: /opt/mellanox/hcoll
         prefix: /opt/mellanox/hcoll
     buildable: false
   slurm:
     externals:
-      - spec: 'slurm@21.08.8 % gcc@8.5.0 arch=n'
-        prefix: /cm/shared/apps/slurm/21.08.8
-      - spec: 'slurm@21.08.8 % gcc@10.2.0 arch=linux-rocky8-cascadelake'
-        prefix: /cm/shared/apps/slurm/21.08.8
-      - spec: 'slurm@21.08.8 % intel@19.1.3.304 arch=linux-rocky8-cascadelake'
-        prefix: /cm/shared/apps/slurm/21.08.8
-        prefix: /cm/shared/apps/slurm/21.08.8
+      - spec: 'slurm@22.05.8 % gcc@11.2.0 arch=linux-rocky9-skylake_avx512'
+        prefix: /cm/shared/apps/slurm/22.05.8
+      - spec: 'slurm@22.05.8 % gcc@10.2.0 arch=linux-rocky9-broadwell'
+        prefix: /cm/shared/apps/slurm/22.05.8
+      - spec: 'slurm@22.05.8 % intel@19.1.3.304 arch=linux-rocky9-broadwell'
+        prefix: /cm/shared/apps/slurm/22.05.8
     buildable: false
   librsvg:
     externals:
-      - spec: 'librsvg@2.42.7 % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'librsvg@2.42.7 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
     buildable: false
   ghostscript:
     externals:
-      - spec: 'ghostscript@9.27 % gcc@10.2.0 arch=linux-rocky8-cascadelake'
+      - spec: 'ghostscript@9.27 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
     buildable: false
   gaussian:
