--- a/etc/spack/sdsc/tscc/0.17.3/cpu/yamls/compilers.yaml
+++ b/etc/spack/sdsc/tscc/0.17.3/cpu/yamls/compilers.yaml
@@ -1,6 +1,6 @@
 compilers:
 - compiler:
-    spec: gcc@8.5.0
+    spec: gcc@11.2.0
     paths:
       cc: /usr/bin/gcc
       cxx: /usr/bin/g++
@@ -10,7 +10,7 @@ compilers:
       cflags: -O2 -march=native
       cxxflags: -O2 -march=native
       fflags: -O2 -march=native
-    operating_system: rocky8
+    operating_system: rocky9
     target: x86_64
     modules: []
     environment: {}
@@ -18,25 +18,25 @@ compilers:
 - compiler:
     spec: gcc@10.2.0
     paths:
-      cc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-10.2.0-i62tgsoexc6ya4h7urwhriiujk22nrnj/bin/gcc
-      cxx: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-10.2.0-i62tgsoexc6ya4h7urwhriiujk22nrnj/bin/g++
-      f77: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-10.2.0-i62tgsoexc6ya4h7urwhriiujk22nrnj/bin/gfortran
-      fc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-10.2.0-i62tgsoexc6ya4h7urwhriiujk22nrnj/bin/gfortran
+      cc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-10.2.0-2ml3m2ltzeohnaco3bxthfprl6dr5gfi/bin/gcc
+      cxx: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-10.2.0-2ml3m2ltzeohnaco3bxthfprl6dr5gfi/bin/g++
+      f77: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-10.2.0-2ml3m2ltzeohnaco3bxthfprl6dr5gfi/bin/gfortran
+      fc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-10.2.0-2ml3m2ltzeohnaco3bxthfprl6dr5gfi/bin/gfortran
     flags: {}
-    operating_system: rocky8
+    operating_system: rocky9
     target: x86_64
     modules: []
     environment: {}
     extra_rpaths: []
 - compiler:
-    spec: gcc@9.2.0
+    spec: gcc@8.5.0
     paths:
-      cc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-9.2.0-7hwyertb45qvcofb5zg35qan35imhn5k/bin/gcc
-      cxx: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-9.2.0-7hwyertb45qvcofb5zg35qan35imhn5k/bin/g++
-      f77: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-9.2.0-7hwyertb45qvcofb5zg35qan35imhn5k/bin/gfortran
-      fc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-9.2.0-7hwyertb45qvcofb5zg35qan35imhn5k/bin/gfortran
+      cc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-8.5.0-w6lov36mdw33cg7qm7ekuusp2bbmt6lu/bin/gcc
+      cxx: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-8.5.0-w6lov36mdw33cg7qm7ekuusp2bbmt6lu/bin/g++
+      f77: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-8.5.0-w6lov36mdw33cg7qm7ekuusp2bbmt6lu/bin/gfortran
+      fc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-8.5.0-w6lov36mdw33cg7qm7ekuusp2bbmt6lu/bin/gfortran
     flags: {}
-    operating_system: rocky8
+    operating_system: rocky9
     target: x86_64
     modules: []
     environment: {}
@@ -44,52 +44,28 @@ compilers:
 - compiler:
     spec: intel@19.1.1.217
     paths:
-      cc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/intel-19.1.1.217-mzhbztsqz3fc6hj7qpcsr3vgmsmbipdd/bin/icc
-      cxx: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/intel-19.1.1.217-mzhbztsqz3fc6hj7qpcsr3vgmsmbipdd/bin/icpc
-      f77: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/intel-19.1.1.217-mzhbztsqz3fc6hj7qpcsr3vgmsmbipdd/bin/ifort
-      fc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/intel-19.1.1.217-mzhbztsqz3fc6hj7qpcsr3vgmsmbipdd/bin/ifort
-    flags: {}
-    operating_system: rocky8
+      cc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/intel-19.1.1.217-6wcrifpdhjoyp4oawdlvcabo2kpbi2xk/bin/icc
+      cxx: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/intel-19.1.1.217-6wcrifpdhjoyp4oawdlvcabo2kpbi2xk/bin/icpc
+      f77: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/intel-19.1.1.217-6wcrifpdhjoyp4oawdlvcabo2kpbi2xk/bin/ifort
+      fc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/intel-19.1.1.217-6wcrifpdhjoyp4oawdlvcabo2kpbi2xk/bin/ifort
+    flags:
+      cflags: -gcc-name=/home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-8.5.0-w6lov36mdw33cg7qm7ekuusp2bbmt6lu/bin/gcc
+      cxxflags: -gcc-name=/home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-8.5.0-w6lov36mdw33cg7qm7ekuusp2bbmt6lu/bin/gcc
+    operating_system: rocky9
     target: x86_64
     modules: [intel/19.1.1.217]
     environment: {}
     extra_rpaths: []
 - compiler:
-    spec: gcc@11.2.0
+    spec: gcc@9.2.0
     paths:
-      cc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-11.2.0-ob7fagepcv4g2qiwe67jxgrd3ff6jjh7/bin/gcc
-      cxx: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-11.2.0-ob7fagepcv4g2qiwe67jxgrd3ff6jjh7/bin/g++
-      f77: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-11.2.0-ob7fagepcv4g2qiwe67jxgrd3ff6jjh7/bin/gfortran
-      fc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/gcc-11.2.0-ob7fagepcv4g2qiwe67jxgrd3ff6jjh7/bin/gfortran
+      cc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-9.2.0-ess446ry7axsy3husbm53pc2wuuheun5/bin/gcc
+      cxx: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-9.2.0-ess446ry7axsy3husbm53pc2wuuheun5/bin/g++
+      f77: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-9.2.0-ess446ry7axsy3husbm53pc2wuuheun5/bin/gfortran
+      fc: /home/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky9-cascadelake/gcc-11.2.0/gcc-9.2.0-ess446ry7axsy3husbm53pc2wuuheun5/bin/gfortran
     flags: {}
-    operating_system: rocky8
+    operating_system: rocky9
     target: x86_64
     modules: []
-    environment: {}
-    extra_rpaths: []
-- compiler:
-    spec: nvhpc@21.3
-    paths:
-      cc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/nvhpc-21.3-f2mycm2gridx7c6xzazdn2ywnpl53bdf/Linux_x86_64/21.3/compilers/bin/nvc
-      cxx: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/nvhpc-21.3-f2mycm2gridx7c6xzazdn2ywnpl53bdf/Linux_x86_64/21.3/compilers/bin/nvc++
-      f77: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/nvhpc-21.3-f2mycm2gridx7c6xzazdn2ywnpl53bdf/Linux_x86_64/21.3/compilers/bin/nvfortran 
-      fc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/nvhpc-21.3-f2mycm2gridx7c6xzazdn2ywnpl53bdf/Linux_x86_64/21.3/compilers/bin/nvfortran
-    flags: {}
-    operating_system: rocky8
-    target: x86_64
-    modules: [nvhpc/21.3]
-    environment: {}
-    extra_rpaths: []
-- compiler:
-    spec: pgi@18.10
-    paths:
-      cc:  /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/pgi-18.10-zmqqadtbdpyt3wlq44uw32gpihniy3jb/linux86-64/18.10/bin/pgcc
-      cxx: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/pgi-18.10-zmqqadtbdpyt3wlq44uw32gpihniy3jb/linux86-64/18.10/bin/pgc++
-      f77: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/pgi-18.10-zmqqadtbdpyt3wlq44uw32gpihniy3jb/linux86-64/18.10/bin/pgf77
-      fc: /cm/shared/jpg/cm/shared/apps/spack/0.17.3/cpu/opt/spack/linux-rocky8-skylake_avx512/gcc-8.5.0/pgi-18.10-zmqqadtbdpyt3wlq44uw32gpihniy3jb/linux86-64/18.10/bin/pgfortran
-    flags: {}
-    operating_system: rocky8
-    target: x86_64
-    modules: [pgi/18.10]
     environment: {}
     extra_rpaths: []
