--- a/etc/spack/sdsc/tscc/0.17.3/gpu/yamls/packages.yaml
+++ b/etc/spack/sdsc/tscc/0.17.3/gpu/yamls/packages.yaml
@@ -21,6 +21,16 @@ packages:
       - spec: 'texlive@live % intel@19.1.1.217 arch=linux-rocky9-broadwell'
         prefix: /usr
     buildable: false
+  openmpi:
+    externals:
+      - spec: 'openmpi@4.0.5 % nvhpc@22.1 arch=linux-rocky9-broadwell'
+        prefix:  /home/jpg/cm/shared/apps/spack/0.17.3/gpu/opt/spack/linux-rocky9-broadwell/gcc-11.2.0/nvhpc-22.1-rsks4ptuwyfjjxigybva7k53ihgacw3y/Linux_x86_64/22.1/comm_libs/openmpi4/openmpi-4.0.5
+    buildable: true
+  qd:
+    externals:
+      - spec: 'qd@2.3.13 % nvhpc@22.1 arch=linux-rocky9-broadwell'
+        prefix: /home/jpg/cm/shared/apps/spack/0.17.3/gpu/opt/spack/linux-rocky9-broadwell/gcc-11.2.0/nvhpc-22.1-rsks4ptuwyfjjxigybva7k53ihgacw3y/Linux_x86_64/22.1/compilers/extras/qd
+    buildable: false
   openssl:
     externals:
       - spec: 'openssl@1.1.1k % gcc@10.2.0 arch=linux-rocky9-broadwell'
@@ -30,9 +40,9 @@ packages:
     buildable: false
   rdma-core:
     externals:
-      - spec: 'rdma-core@41.0 % gcc@10.2.0 arch=linux-rocky9-broadwell'
+      - spec: 'rdma-core@28.0 % gcc@10.2.0 arch=linux-rocky9-broadwell'
         prefix: /usr
-      - spec: 'rdma-core@41.0 % intel@19.1.1.217 arch=linux-rocky9-broadwell'
+      - spec: 'rdma-core@28.0 % intel@19.1.1.217 arch=linux-rocky9-broadwell'
         prefix: /usr
         prefix: /usr
     buildable: false
