Add lmod@8.2.4 as an external package in expanse/0.17.3/cpu

--- a/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/packages.yaml
+++ b/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/packages.yaml
@@ -1,4 +1,9 @@
 packages:
+  lmod:
+    externals:
+      - spec: 'lmod@8.2.4'
+        prefix: /usr
+    buildable: false
   lustre:
     externals:
       - spec: 'lustre@2.15.2'
