--- a/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/modules.yaml
+++ b/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/modules.yaml
@@ -7,37 +7,19 @@ modules:
         - 'gcc@8.5.0'
       hierarchy:
         - mpi
-      hash_length: 0
+      hash_length: 7
       blacklist_implicits: true
-      naming_scheme: '{name}/{version}/{hash:7}'
+      naming_scheme: '{name}/{version}/{hash}'
       projections:
-        all: '{name}/{version}/{hash:7}'
-      adol-c:
-        suffixes:
-          '+openmp': omp
-      amdblis:
-        suffixes:
-          'threads=openmp': omp
-      fftw:
-        suffixes:
-          '+openmp': omp
-      hpl:
-        suffixes:
-          '+openmp': omp
-      hypre:
-        suffixes:
-          '+openmp': omp
+        all: '{name}/{version}/{hash}'
+      suffixes:
+        '+openmp': omp
+        'threads=openmp': omp
+        '+ipl64': i64
       intel:
         environment:
           set:
             INTEL_LICENSE_FILE: '40000@elprado.sdsc.edu:40200@elprado.sdsc.edu'
-      kokkos:
-        suffixes:
-          '+openmp': omp
-      openblas:
-        suffixes:
-          'threads=openmp': omp
-          '+ilp64': i64
       petsc:
         suffixes:
           '+complex': cmplx
