Fix and apply generic suffixes to 'all' in modules.yaml for expanse/0.17.3/cpu

--- a/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/modules.yaml
+++ b/etc/spack/sdsc/expanse/0.17.3/cpu/yamls/modules.yaml
@@ -12,10 +12,11 @@ modules:
       naming_scheme: '{name}/{version}/{hash}'
       projections:
         all: '{name}/{version}/{hash}'
-      suffixes:
-        '+openmp': omp
-        'threads=openmp': omp
-        '+ipl64': i64
+      all:
+        suffixes:
+          '+openmp': omp
+          'threads=openmp': omp
+          '+ipl64': i64
       intel:
         environment:
           set:
