--- a/etc/spack/sdsc/expanse/0.17.3/gpu/b/yamls/modules.yaml
+++ b/etc/spack/sdsc/expanse/0.17.3/gpu/b/yamls/modules.yaml
@@ -9,6 +9,7 @@ modules:
         - mpi
       hash_length: 0
       blacklist_implicits: true
+      whitelist: ['py-jupyter-core']
       naming_scheme: '{name}/{version}/{hash:7}'
       projections:
         all: '{name}/{version}/{hash:7}'
